PostGIS 2.0.1
2012/MM/DD

* Bug Fixes *

  - #1791, fix ST_Azimuth with very close but distinct points.
  - #1775, ST_ChangeEdgeGeom collision detection with 2-vertex target.
  - #1776, fix ST_SymDifference(empty, geom) to return geom.
  - #1708, improve restore of PosgreSQL 9.1 backups.
  - #1766, don't let ST_RemEdge* destroy peripheral TopoGeometry objects.
  - #1714, more robust handling of high topology tolerance.
  - #1759, loading transformed shapefiles in raster enabled db.
  - #1761, handling of subdatasets in NetCDF, HDF4 and HDF5 in raster2pgsql.
  - #1763, topology.toTopoGeom use with custom search_path.
  - #1755, ST_GeographyFromText support for higher dimensions.
  - #1782, fix spatial reference string handling in raster.
  - #1790, fix toTopoGeom handling of duplicated primitives.

* Enhancements *

  - More detailed exception message from topology editing functions.
  - #1786, improved build dependencies 

PostGIS 2.0.0
2012/04/03
   
* Important / Breaking Changes  *

  - Upgrading to PostGIS 2.0 REQUIRES a dump and restore. See the
    "Hard Upgrade" section of the documentation.
  - Functions deprecated during the 1.X series (mostly non-ST variants)
    have been removed. Update your application to the new signatures.
    If you cannot update your application, see the legacy.sql file
    to enable the old signatures.
  - GEOMETRY_COLUMNS is now a view, not a table. Code that manually
    updates the table must be changed to either use the management
    functions (eg AddGeometryColumn) or the new geometry typmod options
    (eg CREATE TABLE t (g GEOMETRY(Polgyon, 4326)))
  - ST_AsBinary and ST_AsText now return 3D/4D results in ISO SQL/MM
    format when called on 3D/4D features.
  - The "unknonwn SRID" is now 0, not -1. 
    (eg ST_SRID(ST_GeomFromText('POINT(0 0)')) returns 0)
  - ST_NumGeometries returns 1 for singletons. ST_GeometryN returns the 
    the geometry for singletons.