@@ -61,7 +61,8 @@ TESTS = regress/legacy_validate.sql regress/legacy_predicate.sql \
 	regress/getfacebypoint.sql \
 	regress/getringedges.sql \
 	regress/gettopogeomelements.sql \
-	regress/layertrigger.sql
+	regress/layertrigger.sql \
+	regress/validatetopology.sql
 
 check: topo_predicates.sql load_topology.sql load_topology-4326.sql
 	$(MAKE) -C ../../regress staged-install
